<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/conBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IndexActivity">


    <androidx.gridlayout.widget.GridLayout
        android:id="@+id/glLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:columnCount="3"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rowCount="3">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvForeword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/conForeword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark">

                <TextView
                    android:id="@+id/tvForeword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/foreword"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="0"
            app:layout_rowWeight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/conPoemsDedicatedToNature"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/dark">

                <TextView
                    android:id="@+id/tvPoemsDedicatedToNature"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/poems_dedicated_nto_nature"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/conNostalgia"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/nostalgia">

                <TextView
                    android:id="@+id/tvNostalgia"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/nostalgia"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="1"
            app:layout_rowWeight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/conIHavePerceivedSoManyThings"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/i_have_perceived_so_many_things">

                <TextView
                    android:id="@+id/tvIHavePerceivedSoManyThings"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/i_have_perceived_n_so_many_things"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:layout_column="0"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/conPoemsAboutLove"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/love">

                <TextView
                    android:id="@+id/tvPoemsAboutLove"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/poems_about_love"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            app:cardCornerRadius="15dp"
            app:layout_column="1"
            app:layout_columnWeight="1"
            app:layout_gravity="fill"
            app:layout_row="2"
            app:layout_rowWeight="1">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/conStories"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/stories">

                <TextView
                    android:id="@+id/tvStories"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/stories"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>

    </androidx.gridlayout.widget.GridLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <CheckBox

            android:id="@+id/cbNightMode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingVertical="5dp"
            android:text="@string/night_mode" />

        <TextView
            android:id="@+id/tvFontSize"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:text="@string/font_size"
            android:textColor="@color/black"
            android:textSize="19sp" />

        <RadioGroup
            android:id="@+id/rbGroub"
            android:layout_width="match_parent"

            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/rbSize15"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/_15" />

            <RadioButton
                android:id="@+id/rbsize20"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_20" />

            <RadioButton
                android:id="@+id/rbSize25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/_25" />
        </RadioGroup>

        <TextView
            android:id="@+id/tvAbout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/about"
            android:textColor="@color/red"
            android:textSize="19sp" />

        <TextView
            android:id="@+id/tvBackToBook"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/back_to_book"
            android:textColor="@color/red"
            android:textSize="19sp"
            app:drawableLeftCompat="@drawable/ic_baseline_arrow_back_24_red" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>